[package]
name = "twitter-api"
version = "0.1.0"
authors = ["Pedro Henrique Caetano Silva <pedro.caetano@inatel.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8"
actix-web = "1.0.0-beta"
mongodb = "0.9.0"
bson = "0.14.0"
uuid = { version = "0.8", features = ["serde", "v4"]}

bytes = "0.5.2"
futures = "0.3.1"
env_logger = "*"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "*"